<resources>
    <string name="app_name">Siam U App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tvName">ชื่ออาจารย์ :</string>
    <string name="tvFaculty">คณะ : </string>
    <string name="tvDepartment">สาขา :</string>
    <string name="btnSearch">ค้นหา</string>
    <string name="btnClear">ยกเลิก</string>
    <string name="tvTopic">ชื่อกระทู้ :</string>
    <string name="tvPlace">สถานที่ :</string>
    <string name="tvDuration">ระยะเวลา :</string>
    <string name="ID">ID</string>
    <string name="Value">Value</string>
    <string name="image_of_building">image of building</string>
    <string name="building">อาคาร : </string>
    <string name="description">รายละเอียด : </string>
    <string name="floors">จำนวนชั้น : </string>
    <string name="must"> *</string>
    <string name="topicName">ชื่อกระทู้ </string>
    <string name="userID">รหัสผู้พบ </string>
    <string name="foundPlace">สถานที่พบ :</string>
    <string name="found_item_image">found_item_image</string>
    <string name="btnAttrach">แนบรูป</string>
    <string name="post_image">post_image</string>
    <string name="post_title">Title</string>
    <string name="post_id">ID</string>
    <string name="post_place">Place</string>
    <string name="post_date">Date</string>
    <string name="people_image">people_image</string>
    <string name="people_name">Name</string>
    <string name="people_faculty">Faculty</string>
    <string name="people_department">Department</string>
    <string name="open_location_settings">เปิด</string>
    <string name="cancel">ไม่</string>

</resources>
