<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/buildingImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/image_of_building"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/buildingNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/buildingDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/buildingFloor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/floors"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>