<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/post_thumbnail"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/post_image" />

    <TextView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:text="Loading..."
        android:visibility="visible" />

    <TextView
        android:id="@+id/post_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/post_thumbnail"
        android:text="@string/post_title"
        android:textSize="16sp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/post_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ID"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/post_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/post_title"
        android:layout_alignStart="@+id/post_title"
        android:layout_below="@+id/post_title"
        android:layout_marginTop="8dp"
        android:text="@string/post_place" />

    <TextView
        android:id="@+id/post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/post_place"
        android:layout_marginRight="8dp"
        android:text="@string/post_date" />

    <View
        android:id="@+id/cutLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/post_thumbnail"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray" />

</RelativeLayout>