<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/people_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/people_image" />

    <TextView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="40dp"
        android:layout_toLeftOf="@+id/people_faculty"
        android:text="Loading..."
        android:visibility="invisible" />

    <TextView
        android:id="@+id/people_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/people_image"
        android:text="@string/people_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/people_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ID"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/people_faculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/people_name"
        android:layout_alignStart="@+id/people_name"
        android:layout_below="@+id/people_name"
        android:layout_marginTop="8dp"
        android:text="@string/people_faculty" />

    <TextView
        android:id="@+id/people_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/people_name"
        android:layout_alignStart="@+id/people_name"
        android:layout_below="@+id/people_faculty"
        android:layout_marginTop="8dp"
        android:text="@string/people_department" />

    <View
        android:id="@+id/cutLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/people_department"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray" />

</RelativeLayout>